<resources>
    <string name="app_name">Makac</string>
    <string name="summary_name">Results</string>
    <string name="users_name">Users database</string>
    <string name="weather_name">Weather</string>
    <string name="action_settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="temperature">Temperature</string>
    <string name="weather">Weather</string>
    <string name="avatar">Avatar</string>
    <string name="database">Database</string>
    <string name="registration_user">Registration user</string>
    <string name="your_photo">Your photo</string>
    <string name="name_row">Name</string>
    <string name="weight_row">Weight</string>
    <string name="login_button">Login</string>
    <string name="save_btn">Save</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="calories">Calories</string>
    <string name="add_user">Add user</string>
    <string name="database_title">Database</string>
    <string name="weather_title">Weather</string>
    <string name="exit_title">Exit</string>
    <string name="m_s">m/s</string>
    <string name="start_button">Start</string>
    <string name="resume_button">Resume</string>
    <string name="pause_button">Pause</string>
    <string name="reset_button">Reset</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>
    <string name="km">km</string>
    <string name="kcal">cal</string>
    <string name="share_button">Share</string>
    <string name="back_button">Back</string>
    <string name="condition">Condition</string>
    <string name="location">Location</string>
    <string name="condition_icon">Condition Icon</string>
    <string name="loading">Loading&#8230;</string>
    <string name="temperature_output">%1$d&#176;%2$s</string>
    <string name="update_location">Update Location</string>
    <string name="change">Change user</string>
    <string name="update_data">Update data to database</string>
    <string name="saved_to_database">Saved to database</string>
    <string name="make_photo">Please make the photo!</string>
    <string name="enter_weight">Please enter the weight!</string>
    <string name="enter_name">Please enter the name!</string>
    <string name="not_found_location">The position could not be found!</string>

</resources>
