<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:gravity="center|top">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weatherIconImageView"
            android:layout_alignParentTop="true"
            android:src="@drawable/icon_na"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/condition_icon" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/temperature"
                android:id="@+id/temperatureTextView"
                android:layout_below="@+id/weatherIconImageView"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:typeface="serif"
                android:textColor="#08d68b" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/condition"
                android:id="@+id/conditionTextView"
                android:layout_below="@+id/temperatureTextView"
                android:layout_centerHorizontal="true"
                android:textColor="#08d68b" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/location"
                android:id="@+id/locationTextView"
                android:layout_below="@+id/conditionTextView"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:textColor="#08d68b" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>